Replaced popover menus with normal context menus

--- a/apps/ui/src/lang/de.json
+++ b/apps/ui/src/lang/de.json
@@ -47,6 +47,7 @@
   "loading_video": "Video wird geladen",
   "low": "Niedrig",
   "mark_as_seen": "Als gesehen markieren",
+  "mark_all_before_as_seen": "Bis hier als gesehen markieren",
   "media_keys": "Steuern der Wiedergabe mit den Medientasten",
   "medium": "Medium",
   "minutes": "Minuten",
