--- a/apps/ui/src/lang/en.json
+++ b/apps/ui/src/lang/en.json
@@ -52,6 +52,7 @@
   "loading_page": "Loading page",
   "loading_video": "Loading video",
   "mark_as_seen": "Mark Watched",
+  "mark_all_before_as_seen": "Mark as seen until here",
   "media_keys": "Control playback with media keys",
   "minutes": "Minutes",
   "network": "Network",
