Improved Continue watching

--- a/apps/ui/src/lang/de.json
+++ b/apps/ui/src/lang/de.json
@@ -113,5 +113,6 @@
   "you_may_also_like": "Das könnte dir auch gefallen",
   "show_real_icons": "Echte App Icons anzeigen",
   "trailer_autocrop": "Trailer automatisch beschneiden (Experimentell)",
-  "play_url": "Url Wiedergeben"
+  "play_url": "Url Wiedergeben",
+  "continue_watching": "Weiter Schauen"
 }
