--- a/apps/ui/src/lang/en.json
+++ b/apps/ui/src/lang/en.json
@@ -128,5 +128,6 @@
   "empty_watchlist": "Your watchlist is empty.",
   "show_all": "Show All",
   "home": "Home",
-  "downloads": "Downloads"
+  "downloads": "Downloads",
+  "continue_watching": "Continue watching"
 }
