--- a/apps/ui/src/lang/de.json
+++ b/apps/ui/src/lang/de.json
@@ -1,10 +1,10 @@
 {
   "about": "Über",
   "accept": "Akzeptieren",
-  "add_to_watchlist": "Zu Favoriten hinzufügen",
+  "add_to_watchlist": "Zu Merkliste hinzufügen",
   "additional-info": "Zusätzliche Informationen",
   "always_on_top": "Immer im Vordergrund",
-  "audio_language": "Audio Sprache",
+  "audio_language": "Bevorzugte Audio Sprache",
   "auto_zoom": "Auto Zoom",
   "autoplay": "Autoplay",
   "autoresume_ask": "Fragen",
@@ -15,7 +15,7 @@
   "can_not_play_back": "Wiedergabe nicht möglich",
   "cast": "Besetzung",
   "certification": "Altersfreigabe",
-  "clear_application_cache": "Application Cache Löschen",
+  "clear_application_cache": "Cache Löschen",
   "de": "Deutsch",
   "description": "Handlung",
   "disabled": "Deaktivert",
@@ -23,12 +23,14 @@
   "download": "Herunterladen",
   "downloads": "Heruntergeladen",
   "drag_and_drop_to_re_order": "Benutze Drag\"n\"Drop um die Quellen anzuordnen.",
-  "empty_watchlist": "Deine Watchlist ist leider leer.",
+  "empty_watchlist": "Deine Merkliste ist leider leer.",
   "en": "English",
   "episode": "Folge",
   "error_loading_app": "Fehler beim laden einer App",
   "error_loading_media": "Fehler beim laden des Media Item",
   "extensions": "Erweiterungen",
+  "add_extensions": "Erweiterung hinzufügen",
+  "remove_extensions": "Erweiterung entfernen",
   "format_not_supported": "Format wird nicht unterstützt",
   "fullscreen_off": "Vollbild aus",
   "fullscreen_on": "Vollbild ein",
@@ -74,10 +76,10 @@
   "release_date": "Erscheinungsdatum",
   "reload": "Neuladen",
   "reload_season": "Staffel neuladen",
-  "remove_from_watchlist": "Von Favoriten entfernen",
+  "remove_from_watchlist": "Von Merkliste entfernen",
   "reset": "Zurücksetzen",
   "reset_season": "Staffel zurücksetzen",
-  "resolver": "Hoster",
+  "resolver": "Quellen",
   "resume": "Fortsetzen",
   "runtime": "Dauer",
   "scroll_to_change_volume": "Scrollen um die Lautstärke zu ändern",
@@ -97,22 +99,23 @@
   "stop": "Stop",
   "studios": "Studios",
   "subtitle": "Untertitel",
-  "subtitle_language": "Untertitel Sprache",
+  "subtitle_language": "Bevorzugte Untertitel Sprache",
   "trailer_autoplay": "Trailer Automatisch Wiedergeben",
   "update_downloading": "Wird heruntergeladen (%0%).",
   "update_message_bottom": "%0 (%1) ist verfühgbar.",
   "update_message_top": "Aktualisieren",
   "url_not_supported": "Url wird nicht unterstützt",
-  "watchlist": "Favoriten",
-  "watchlist_success_add": "\"{{title}}\" wurde zu deinen Favoriten hinzugefügt.",
-  "watchlist_success_add_movie": "Der Film \"{{title}}\" wurde zu deinen Favoriten hinzugefügt.",
-  "watchlist_success_add_tv": "Die Serie \"{{title}}\" wurde zu deinen Favoriten hinzugefügt.",
-  "watchlist_success_remove": "\"{{title}}\" wurde von deinen Favoriten entfernt.",
+  "watchlist": "Merkliste",
+  "watchlist_success_add": "\"{{title}}\" wurde zu deiner Merkliste hinzugefügt.",
+  "watchlist_success_add_movie": "Der Film \"{{title}}\" wurde zu deiner Merkliste hinzugefügt.",
+  "watchlist_success_add_tv": "Die Serie \"{{title}}\" wurde zu deiner Merkliste hinzugefügt.",
+  "watchlist_success_remove": "\"{{title}}\" wurde von deiner Merkliste entfernt.",
   "year": "Jahr",
   "you_are_offline": "Du bist Offline",
   "you_may_also_like": "Das könnte dir auch gefallen",
-  "show_real_icons": "Echte App Icons anzeigen",
+  "show_real_icons": "App Icons anzeigen",
   "trailer_autocrop": "Trailer automatisch beschneiden (Experimentell)",
   "play_url": "Url Wiedergeben",
-  "continue_watching": "Weiter Schauen"
+  "continue_watching": "Wiedergabe Fortsetzen",
+  "disableVibrancy": "Hintergrundeffekte Deaktivieren"
 }
