- Added Open with modal - Added new Featured on home - Style changes

--- a/apps/ui/src/lang/de.json
+++ b/apps/ui/src/lang/de.json
@@ -83,7 +83,7 @@
   "resume": "Fortsetzen",
   "runtime": "Dauer",
   "scroll_to_change_volume": "Scrollen um die Lautstärke zu ändern",
-  "search": "Suche",
+  "search": "Suchen",
   "search_all": "Alles durchsuchen",
   "season": "Staffel",
   "seconds": "Sekunden",
